--- a/src/main/kotlin/org/wfanet/measurement/loadtest/dataprovider/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/loadtest/dataprovider/BUILD.bazel
@@ -291,6 +291,7 @@ kt_jvm_library(
     deps = [
         ":edp_simulator_runner",
         ":synthetic_generator_event_query",
+        "//src/main/kotlin/org/wfanet/measurement/common/testing:population_spec_converter",
         "@wfa_common_jvm//imports/java/picocli",
         "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common",
     ],
