Add rpc GetStage in duchy control service.

--- a/src/main/kotlin/org/wfanet/measurement/duchy/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/duchy/BUILD.bazel
@@ -14,3 +14,11 @@ kt_jvm_library(
         "//src/main/proto/wfa/measurement/internal/duchy:computation_protocols_kt_jvm_proto",
     ],
 )
+
+kt_jvm_library(
+    name = "etags",
+    srcs = ["ETags.kt"],
+    deps = [
+        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/crypto:hashing",
+    ],
+)
