--- a/src/main/proto/wfa/measurement/internal/duchy/BUILD.bazel
+++ b/src/main/proto/wfa/measurement/internal/duchy/BUILD.bazel
@@ -133,6 +133,7 @@ proto_library(
     deps = [
         ":computation_protocols_proto",
         ":computation_token_proto",
+        ":stage_proto",
     ],
 )
 
@@ -197,4 +198,18 @@ kt_jvm_proto_library(
 cc_proto_library(
     name = "noise_mechanism_cc_proto",
     deps = [":noise_mechanism_proto"],
+)
+
+proto_library(
+    name = "stage_proto",
+    srcs = ["stage.proto"],
+    strip_import_prefix = IMPORT_PREFIX,
+    deps = [
+        ":computation_protocols_proto",
+    ],
+)
+
+kt_jvm_proto_library(
+    name = "stage_kt_jvm_proto",
+    deps = [":stage_proto"],
 )
