--- a/src/main/proto/wfa/measurement/system/v1alpha/BUILD.bazel
+++ b/src/main/proto/wfa/measurement/system/v1alpha/BUILD.bazel
@@ -63,6 +63,23 @@ kt_jvm_proto_library(
 )
 
 proto_library(
+    name = "stage_proto",
+    srcs = ["stage.proto"],
+    strip_import_prefix = IMPORT_PREFIX,
+    deps = [
+        "@com_google_googleapis//google/api:annotations_proto",
+        "@com_google_googleapis//google/api:field_behavior_proto",
+        "@com_google_googleapis//google/api:resource_proto",
+    ],
+)
+
+kt_jvm_proto_library(
+    name = "stage_kt_jvm_proto",
+    visibility = ["//visibility:public"],
+    deps = [":stage_proto"],
+)
+
+proto_library(
     name = "differential_privacy_proto",
     srcs = ["differential_privacy.proto"],
     strip_import_prefix = IMPORT_PREFIX,
@@ -187,6 +204,8 @@ proto_library(
     srcs = ["computation_control_service.proto"],
     strip_import_prefix = IMPORT_PREFIX,
     deps = [
+        ":stage_proto",
+        "@com_google_googleapis//google/api:client_proto",
         "@com_google_googleapis//google/api:field_behavior_proto",
         "@com_google_googleapis//google/api:resource_proto",
     ],
