fix missing types

--- a/src/main/proto/wfa/measurement/internal/kingdom/bigquerytables/BUILD.bazel
+++ b/src/main/proto/wfa/measurement/internal/kingdom/bigquerytables/BUILD.bazel
@@ -4,4 +4,5 @@ package(default_visibility = ["//:__subpackages__"])
 
 proto_and_kt_jvm_proto_library(
     name = "operational_metrics_dataset",
+    deps = ["@com_google_protobuf//:timestamp_proto"],
 )
