--- a/.github/workflows/deploy-kingdom.yml
+++ b/.github/workflows/deploy-kingdom.yml
@@ -17,7 +17,7 @@
 name: Deploy Kingdom
 
 on:
-  workflow_dispatch:
+  push:
 
 jobs:
   terraform:
@@ -31,6 +31,6 @@ jobs:
     uses: ./.github/workflows/configure-kingdom.yml
     secrets: inherit
     with:
-      image-tag: 72914b6d24960f01d328f7b6f5dcdfbc73c2fda6
+      image-tag: 9f28dedff9f5b5431ae9073170ee07ce88f21e36
       environment: dev
       apply: true
