--- a/src/main/kotlin/org/wfanet/measurement/duchy/service/system/v1alpha/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/duchy/service/system/v1alpha/BUILD.bazel
@@ -32,6 +32,7 @@ kt_jvm_library(
         "ProtoConversions.kt",
     ],
     deps = [
+        "//src/main/kotlin/org/wfanet/measurement/duchy:etags",
         "//src/main/kotlin/org/wfanet/measurement/system/v1alpha:resource_key",
         "//src/main/proto/wfa/measurement/internal/duchy:async_computation_control_service_kt_jvm_grpc_proto",
         "//src/main/proto/wfa/measurement/system/v1alpha:computation_control_service_kt_jvm_grpc_proto",
