--- a/src/main/kotlin/org/wfanet/measurement/eventdataprovider/shareshuffle/v2alpha/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/eventdataprovider/shareshuffle/v2alpha/BUILD.bazel
@@ -11,6 +11,7 @@ kt_jvm_library(
     srcs = glob(["*.kt"]),
     tags = ["maven_coordinates=" + MAVEN_COORDINATES],
     deps = [
+        "//src/main/kotlin/org/wfanet/measurement/api/v2alpha:packed_messages",
         "//src/main/kotlin/org/wfanet/measurement/api/v2alpha:population_spec_validator",
         "//src/main/kotlin/org/wfanet/measurement/api/v2alpha:resource_key",
         "//src/main/proto/wfa/frequency_count:frequency_vector_kt_jvm_proto",
