--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -16,9 +16,9 @@ BORINGSSL_VERSION = "0.0.0-20230215-5c22014"
 # * https://docs.aws.amazon.com/kinesisanalytics/latest/java/earlier.html
 APACHE_BEAM_VERSION = "2.45.0"
 
-K8S_CLIENT_VERSION = "20.0.0"
+K8S_CLIENT_VERSION = "21.0.0"
 
-# Bazel Central Registry modules.
+# Bazel Central Registry modules
 bazel_dep(
     name = "platforms",
     version = "0.0.9",
