--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -18,7 +18,7 @@ APACHE_BEAM_VERSION = "2.45.0"
 
 K8S_CLIENT_VERSION = "20.0.0"
 
-# Bazel Central Registry modules
+# Bazel Central Registry modules.
 bazel_dep(
     name = "platforms",
     version = "0.0.9",
