--- a/experimental/dp_consistency/src/test/python/tools/BUILD.bazel
+++ b/experimental/dp_consistency/src/test/python/tools/BUILD.bazel
@@ -4,7 +4,7 @@ py_test(
     name = "test_correct_origin_report",
     srcs = ["test_correct_origin_report.py"],
     data = [
-        "//experimental/dp_consistency/src/test/python/tools:example_origin_report.xlsx",  # Adjust the path if needed
+        "//experimental/dp_consistency/src/test/python/tools:example_origin_report.xlsx",
     ],
     deps = [
         "//experimental/dp_consistency/src/main/python/report",
