--- a/experimental/dp_consistency/src/main/python/report/BUILD.bazel
+++ b/experimental/dp_consistency/src/main/python/report/BUILD.bazel
@@ -5,7 +5,7 @@ py_library(
     srcs = ["report.py"],
     visibility = ["//visibility:public"],
     deps = [
-        "//experimental/dp_consistency/src/main/python/noiseninja:noised_measurements",
-        "//experimental/dp_consistency/src/main/python/noiseninja:solver",
+        "//experimental/dp_consistency/src/main/python:noiseninja",
+        "//experimental/dp_consistency/src/main/python/noiseninja",
     ],
 )
