--- a/experimental/dp_consistency/src/test/python/noiseninja/BUILD.bazel
+++ b/experimental/dp_consistency/src/test/python/noiseninja/BUILD.bazel
@@ -5,7 +5,7 @@ py_test(
     size = "small",
     srcs = ["test_solver.py"],
     deps = [
-        "//experimental/dp_consistency/src/main/python/noiseninja:noised_measurements",
-        "//experimental/dp_consistency/src/main/python/noiseninja:solver",
+        "//experimental/dp_consistency/src/main/python:noiseninja",
+        "//experimental/dp_consistency/src/main/python/noiseninja",
     ],
 )
