--- a/src/main/proto/api-linter.yaml
+++ b/src/main/proto/api-linter.yaml
@@ -22,11 +22,20 @@
 - included_paths:
   - 'wfa/measurement/system/**/*.proto'
   disabled_rules:
+  # Not all methods are useful for all resource types.
+  - 'core::0121::resource-must-support-list'
+  - 'core::0121::resource-must-support-get'
+
+  # gRPC-only. REST/HTTP not supported.
   - 'core::0127::http-annotation'
   - 'core::0133::http-uri-parent'
+
+  # User-specified IDs not supported.
   - 'core::0133::request-id-field'
-  - 'core::0121::resource-must-support-get'
+
+  # API designed before field behavior requirements were introduced.
   - 'core::0203::field-behavior-required'
+  - 'core::0203::resource-name-identifier'
 
 - included_paths:
   - 'wfa/measurement/reporting/v1*/*.proto'
