--- a/src/main/kotlin/org/wfanet/measurement/duchy/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/duchy/BUILD.bazel
@@ -12,6 +12,7 @@ kt_jvm_library(
     srcs = ["ComputationStage.kt"],
     deps = [
         "//src/main/proto/wfa/measurement/internal/duchy:computation_protocols_kt_jvm_proto",
+        "//src/main/proto/wfa/measurement/system/v1alpha:stage_kt_jvm_proto",
     ],
 )
 
