--- a/imports/java/org/bouncycastle/bcpkix/BUILD.bazel
+++ b/imports/java/org/bouncycastle/bcpkix/BUILD.bazel
@@ -1,4 +1,4 @@
-package(default_visibility = ["//visibility:public"])
+package(default_visibility = ["//src/main/kotlin/org/wfanet/panelmatch/common/certificates:__subpackages__"])
 
 alias(
     name = "bcpkix",
