--- a/src/test/kotlin/org/wfanet/panelmatch/client/launcher/BUILD.bazel
+++ b/src/test/kotlin/org/wfanet/panelmatch/client/launcher/BUILD.bazel
@@ -47,7 +47,7 @@ kt_jvm_test(
 kt_jvm_test(
     name = "GrpcApiClientTest",
     timeout = "short",
-    srcs = ["GrpcApiClientTest.kt"],
+    srcs = ["GrpcApiEmrServerlessClientTest.kt"],
     test_class = "org.wfanet.panelmatch.client.launcher.GrpcApiClientTest",
     deps = [
         "//src/main/kotlin/org/wfanet/panelmatch/client/launcher",
