--- a/src/main/kotlin/org/wfanet/panelmatch/common/certificates/aws/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/panelmatch/common/certificates/aws/BUILD.bazel
@@ -12,6 +12,7 @@ kt_jvm_library(
         "//imports/java/software/amazon/awssdk/acmpca",
         "//src/main/kotlin/org/wfanet/panelmatch/common",
         "//src/main/kotlin/org/wfanet/panelmatch/common/certificates",
+        "//src/main/kotlin/org/wfanet/panelmatch/common/certificates:generate-csr",
         "//src/main/kotlin/org/wfanet/panelmatch/common/secrets",
     ],
 )
