--- a/src/main/resources/kingdom/spanner/changelog.yaml
+++ b/src/main/resources/kingdom/spanner/changelog.yaml
@@ -69,3 +69,6 @@ databaseChangeLog:
 - include:
     file: create-proto-bundles.sql
     relativeToChangeLogFile: true
+- include:
+    file: drop-json-columns.sql
+    relativeToChangeLogFile: true
