refactor: Drop JSON debugging columns from Kingdom Spanner DB

--- a/src/main/resources/kingdom/spanner/changelog.yaml
+++ b/src/main/resources/kingdom/spanner/changelog.yaml
@@ -69,3 +69,6 @@ databaseChangeLog:
 - include:
     file: create-proto-bundle.sql
     relativeToChangeLogFile: true
+- include:
+    file: drop-json-columns.sql
+    relativeToChangeLogFile: true
