--- a/experimental/dp_consistency/src/main/kotlin/tools/BUILD.bazel
+++ b/experimental/dp_consistency/src/main/kotlin/tools/BUILD.bazel
@@ -3,8 +3,9 @@ load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_library")
 kt_jvm_library(
     name = "correct_origin_report",
     srcs = ["CorrectOriginReport.kt"],
-    data = [
+    resources = [
         "//experimental/dp_consistency/src/main/python/tools:correct_origin_report",
     ],
     visibility = ["//visibility:public"],
+    deps = ["@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common"]
 )
