--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -37,7 +37,6 @@ bazel_dep(
 )
 bazel_dep(
     name = "common-jvm",
-    version = "0.93.0",
     repo_name = "wfa_common_jvm",
 )
 bazel_dep(
@@ -338,4 +337,14 @@ http_archive(
 single_version_override(
     module_name = "boringssl",
     version = BORINGSSL_VERSION,
+)
+
+# DO_NOT_SUBMIT(world-federation-of-advertisers/common-jvm#278): Use version.
+archive_override(
+    module_name = "common-jvm",
+    integrity = "sha256-gxJ3hIeBdfhiOwXwx5Sj/dgUWaYT63T6FsoQual8Azg=",
+    strip_prefix = "common-jvm-dffb3ac6c28eaab65a57f8f0e92cdf4317b0598d",
+    urls = [
+        "https://github.com/world-federation-of-advertisers/common-jvm/archive/dffb3ac6c28eaab65a57f8f0e92cdf4317b0598d.tar.gz",
+    ],
 )
