--- a/experimental/dp_consistency/src/main/kotlin/tools/BUILD.bazel
+++ b/experimental/dp_consistency/src/main/kotlin/tools/BUILD.bazel
@@ -1,6 +1,6 @@
 load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_binary", "kt_jvm_library")
 
-IMPORT_PREFIX = "/src/main/proto"
+package(default_visibility = ["//visibility:public"])
 
 kt_jvm_binary(
     name = "correct_origin_report",
@@ -10,7 +10,6 @@ kt_jvm_binary(
         "//experimental/dp_consistency/src/main/python/tools:correct_origin_report",
         "//experimental/dp_consistency/src/main/python/tools:correct_origin_report_pyzip",
     ],
-    visibility = ["//visibility:public"],
     deps = [
         ":report_converter",
         "//experimental/dp_consistency/src/main/proto/reporting:report_summary_kt_jvm_proto",
@@ -22,7 +21,6 @@ kt_jvm_binary(
 kt_jvm_library(
     name = "report_converter",
     srcs = ["ReportConverter.kt"],
-    visibility = ["//visibility:public"],
     deps = [
         "//experimental/dp_consistency/src/main/proto/reporting:report_summary_kt_jvm_proto",
         "//src/main/proto/wfa/measurement/reporting/v2alpha:report_kt_jvm_proto",
