--- a/experimental/dp_consistency/src/main/python/tools/BUILD.bazel
+++ b/experimental/dp_consistency/src/main/python/tools/BUILD.bazel
@@ -1,19 +1,19 @@
 load("@pip//:requirements.bzl", "requirement")
 load("@rules_python//python:py_binary.bzl", "py_binary")
 
+package(default_visibility = ["//visibility:public"])
+
 filegroup(
     name = "correct_origin_report_pyzip",
     srcs = [
         "//experimental/dp_consistency/src/main/python/tools:correct_origin_report",
     ],
     output_group = "python_zip_file",
-    visibility = ["//visibility:public"],
 )
 
 py_binary(
     name = "correct_origin_report",
     srcs = ["correct_origin_report.py"],
-    visibility = ["//visibility:public"],
     deps = [
         "//experimental/dp_consistency/src/main/proto/reporting:report_summary_py_pb2",
         "//experimental/dp_consistency/src/main/python/report",
